--- a/less/style.less
+++ b/less/style.less
@@ -64,6 +64,7 @@ h2{
 
 header{
   background-image: url(../images/pattern-background.png);
+  min-width: 1180px;
   & .row{
     font-size: 0;
   }
@@ -166,6 +167,7 @@ header{
   background-size: cover;
   color: #fff;
   padding-top: 35px;
+  min-width: 1180px;
 
   & row{
     padding-top: 120px;
@@ -275,6 +277,7 @@ header{
   text-align: center;
   padding-top: 70px;
   padding-bottom: 100px;
+  min-width: 1180px;
 
   & p{
     font-size: @advantage-paragraph-size;
@@ -285,6 +288,7 @@ header{
 
 .our-clients{
   padding-bottom: 40px;
+  min-width: 1180px;
 
     & ul{
       text-align: left;
@@ -340,6 +344,8 @@ header{
 
 
 .fast-feedback{
+  min-width: 1180px;
+
   &__feedback-form{
     padding-top: 10px;
     padding-bottom: 30px;
@@ -412,7 +418,8 @@ header{
 .reviews{
   padding-top: 70px;
   padding-bottom: 100px;
-  
+  min-width: 1180px;
+
   &__slide{
     position: relative;
 
@@ -449,6 +456,9 @@ header{
 }
 .bx-pager{
   display: none;
+}
+.bx-wrapper, .bx-viewort{
+  min-width: 1180px;
 }
   
   h2{
@@ -507,11 +517,13 @@ header{
 
 .map{
   height: 480px;
+  min-width: 1180px;
 }
 
 footer{
   background-color: @footer-background-color;
   color: #fff;
+  min-width: 1180px;
 
   & p, & span{
     font-size: 18px;
@@ -526,4 +538,22 @@ footer{
   & a{
     color: #ff7479;
   }
+}
+
+@media screen and (max-width: 1180px) {
+    .reviews {
+      & .bx-prev{
+        left: 30px;
+      }
+      & .bx-next{
+        right: 30px;
+      }
+    }
+    .container{
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+    .adress-plate{
+      left: 60px;
+    }
 }
