--- a/less/style.less
+++ b/less/style.less
@@ -64,7 +64,7 @@ h2{
 
 header{
   background-image: url(../images/pattern-background.png);
-  min-width: 1180px;
+  min-width: 1024px;
   & .row{
     font-size: 0;
   }
@@ -167,7 +167,7 @@ header{
   background-size: cover;
   color: #fff;
   padding-top: 35px;
-  min-width: 1180px;
+  min-width: 1024px;
 
   & row{
     padding-top: 120px;
@@ -277,7 +277,7 @@ header{
   text-align: center;
   padding-top: 70px;
   padding-bottom: 100px;
-  min-width: 1180px;
+  min-width: 1024px;
 
   & p{
     font-size: @advantage-paragraph-size;
@@ -288,7 +288,7 @@ header{
 
 .our-clients{
   padding-bottom: 40px;
-  min-width: 1180px;
+  min-width: 1024px;
 
     & ul{
       text-align: left;
@@ -344,7 +344,7 @@ header{
 
 
 .fast-feedback{
-  min-width: 1180px;
+  min-width: 1024px;
 
   &__feedback-form{
     padding-top: 10px;
@@ -418,7 +418,7 @@ header{
 .reviews{
   padding-top: 70px;
   padding-bottom: 100px;
-  min-width: 1180px;
+  min-width: 1024px;
 
   &__slide{
     position: relative;
@@ -457,8 +457,8 @@ header{
 .bx-pager{
   display: none;
 }
-.bx-wrapper, .bx-viewort{
-  min-width: 1180px;
+.bx-wrapper, .bx-viewport{
+  min-width: 1024px;
 }
   
   h2{
@@ -517,7 +517,7 @@ header{
 
 .map{
   height: 480px;
-  min-width: 1180px;
+  min-width: 1024px;
 }
 
 footer{
@@ -540,7 +540,7 @@ footer{
   }
 }
 
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 1024px) {
     .reviews {
       & .bx-prev{
         left: 30px;
