--- a/less/variables.less
+++ b/less/variables.less
@@ -3,6 +3,7 @@
                         // и правый маргин для row высчитываются автоматически
 
 @width-container: 1180px;
+@min-width: 1180px;
 
 @main-color: #b52126;  // красный
 @font-family: 'open sans';
