--- a/less/style.less
+++ b/less/style.less
@@ -64,7 +64,7 @@ h2{
 
 header{
   background-image: url(../images/pattern-background.png);
-  min-width: 1024px;
+  min-width: @min-width;
   & .row{
     font-size: 0;
   }
@@ -167,7 +167,7 @@ header{
   background-size: cover;
   color: #fff;
   padding-top: 35px;
-  min-width: 1024px;
+  min-width: @min-width;
 
   & row{
     padding-top: 120px;
@@ -277,7 +277,7 @@ header{
   text-align: center;
   padding-top: 70px;
   padding-bottom: 100px;
-  min-width: 1024px;
+  min-width: @min-width;
 
   & p{
     font-size: @advantage-paragraph-size;
@@ -288,7 +288,7 @@ header{
 
 .our-clients{
   padding-bottom: 40px;
-  min-width: 1024px;
+  min-width: @min-width;
 
     & ul{
       text-align: left;
@@ -344,7 +344,7 @@ header{
 
 
 .fast-feedback{
-  min-width: 1024px;
+  min-width: @min-width;
 
   &__feedback-form{
     padding-top: 10px;
@@ -418,7 +418,7 @@ header{
 .reviews{
   padding-top: 70px;
   padding-bottom: 100px;
-  min-width: 1024px;
+  min-width: @min-width;
 
   &__slide{
     position: relative;
@@ -429,7 +429,7 @@ header{
     width: 32px;
     height: 55px;
     top: 30%;
-    left: -40px;
+    left: 0;
     font-size: 0;
     opacity: 0.4;
       &:hover{
@@ -442,7 +442,7 @@ header{
     width: 32px;
     height: 55px;
     top: 30%;
-    right: -40px;
+    right: 0;
     font-size: 0;
     opacity: 0.4;
       &:hover{
@@ -458,7 +458,7 @@ header{
   display: none;
 }
 .bx-wrapper, .bx-viewport{
-  min-width: 1024px;
+  min-width: @min-width - 20px;
 }
   
   h2{
@@ -517,13 +517,13 @@ header{
 
 .map{
   height: 480px;
-  min-width: 1024px;
+  min-width: @min-width;
 }
 
 footer{
   background-color: @footer-background-color;
   color: #fff;
-  min-width: 1180px;
+  min-width: @min-width;
 
   & p, & span{
     font-size: 18px;
@@ -540,8 +540,10 @@ footer{
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: @min-width) {
     .reviews {
+    overflow: hidden;
+
       & .bx-prev{
         left: 30px;
       }
